--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ function(add_test_executable test_name result_var)
     add_executable(${test_name}.out ./project/tests/${test_name}.cpp ${CPP_FILES_FOR_ALL_VERSION})
     target_include_directories(${test_name}.out PUBLIC ${PATH_TO_INCLUDES})
     target_compile_options(${test_name}.out PRIVATE ${COVERAGE_FLAGS})
-    target_link_libraries(${test_name}.out PRIVATE -fprofile-instr-generate)
+    target_link_libraries(${test_name}.out PRIVATE -fprofile-generate)
     set(${result_var} "${${result_var}} ${test_name}.out" PARENT_SCOPE)
     add_test(NAME ${test_name}.out COMMAND ${test_name}.out)
 endfunction()
